# UMCP

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  readme.txt
debug/: Makefile.am  Makefile.in
docs/: Makefile  Makefile.am  aclocal.m4  all_atom.tex  config.h.in  config.h.in~  configure  configure.ac  construction.options  doc.aux  doc.bbl  doc.blg  doc.tex  doc.toc  doc_old.tex  docs.bib  dynamics.options  dynamics.tex  ex_crowding.tex  examples.tex  hamiltonian.tex  hamiltonian_chapter.tex  introduction.tex  lipid_composition.tex  misc.options  normal_modes.tex  npt.tex  options.tex  preamble.tex  running.tex  rxn.options  sans.tex  setup.options  srd.tex  test.tex  timescales.tex
docs/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
docs/m4/: latex.m4
examples/NBAR/big_square/: nbar_d.inp  nbar_d_ts_test.inp  nbar_m.inp  setup.csh
examples/NBAR/bigger_square/: nbar.save  nbar_d.inp  nbar_m.inp  setup.csh
examples/NBAR/pore/: nbar.save  nbar_d.inp  nbar_m.inp  pore.mesh  setup.csh
examples/NBAR/singleton/: nbar.inp  nbar_d.inp  nbar_m.inp  setup.csh
examples/SRD/: setup.csh  srd.inp
examples/collisions/: collisions.inp  setup.csh
examples/crowding/: crowding.inp  crowding_min.inp  setup.csh
examples/debug/: debug_rd_sim.save  rd.inp  rd.inp~  rd_mf.inp  setup.csh
examples/fit_rho/: both10.cube  both10.rho  fit.inp  midplane10.mesh
examples/kayla/: rd.inp  rxn_info.inp  setup.csh
examples/multilamellar/: exp.qvals  sans.inp  schemeA6.6.bz  setup.csh
examples/multilamellar/SUV/: sans.inp
examples/planar/: setup.csh  sim.inp  sim_explicit.inp  sim_free.inp
examples/pore/: create.inp  dynamics.inp  image.inp  min.inp  run.inp  setup.csh
examples/rd/: rd_mf.inp  setup.csh
examples/rd/mf_huge/: big.mesh  rd_mf.inp
examples/test/: Makefile.am  Makefile.in  readme.txt
examples/test/elastic_collisions/: collisions.inp  hot.save  setup.csh  test_parallel.csh  test_serial.csh
examples/test/energy_conservation/: constant_e.inp  setup.csh  test_parallel.csh  test_serial.csh
examples/test/load_save/: load.inp  save.inp  start.save  test_parallel.csh  test_serial.csh
examples/vesicle_explicit_particle/: full.inp  setup.csh
optimized/: Makefile.am  Makefile.in
qhull-2011.1/: Makefile  inp
qhull-2011.1/src/libqhull/: io.c  io.h  user.h
qhull-2011.1/src/qdelaunay/: qdelaun.c
qhull-2011.1/src/qvoronoi/: qvoronoi.c
qhull-2011.1/src/rbox/: rbox.c
src/: 3d_interp.C  3d_interp.h  GJK.h  GJK_min2.cpp  GT_meshCollisionLib.C  M_matrix.C  M_matrix.h  NBAR.C  NearestSimplexR.cpp  NearestSimplexR2.cpp  alignSet.C  alignSet.h  bd.C  bd_functions.h  bd_sandbox.C  bd_sandbox3.C  box.C  clusterv.C  createAllAtom.C  crowder.C  cuda.cu  curvature.C  dcd.C  dcd.h  dimer.C  dovoronoi.c  dynamics.C  fast_mm.C  fast_mm.h  fitRho.C  fitRho.h  frc_sandbox.C  gather.C  gather.h  gatherLipidData.C  gauss.C  gauss.h  getCylinderMesh.C  getPoreInfo.C  get_regions.C  (+98 more)
src/amoeba_code/: amoeba.C  amoeba.h  amotry.C  dbrent.C  df1dim.C  dlinmin.C  f1dim.C  frprmn.C  linmin.C  mnbrak.C  nrutil.C
src/check/: Bin.h  Check.h  GJK.cpp  NBAR.C  Point.h  bdSurface_sandbox.C  bdSurface_sandbox2.C  bd_functions.cpp  bd_sandbox2.C  boundary_conditions.h  box.h  clusterv.h  coll_sandbox.C  compilation_time.C  crowder.C  dcd.C  dcd.h  deform.C  dimer.C  dynamics.C  functions.cpp  functions.h  get_regions.C  global_boxing.C  global_boxing.h  gsl_random_globals.h  hd.C  height.C  input.C  input.h  interp.h  interpLib.C  irr_kernel.h  l-bfgs.C  lapack_we_use.h  lipid_composition.C  lipid_composition.h  lipid_density.C  local_config.h  m_triangles.h  (+37 more)
src/fpr_subroutines/: 2D.C  2D.h  DDmatrixcreate.cpp  GF_calls.h  TBLsur.cpp  fpr.h  fsur.cpp  integrator.cpp  passocF.cpp  pirr_pfree_ratio_psF.cpp  rand_gsl.h
util/: Makefile.am  Makefile.in
